[gd_scene load_steps=4 format=2]

[ext_resource path="res://Terminal/Terminal_Theme.tres" type="Theme" id=1]
[ext_resource path="res://Terminal/Terminal_Theme_Small.tres" type="Theme" id=2]
[ext_resource path="res://Terminal/Galaxy/New_Zone.gd" type="Script" id=3]

[node name="New_Zone" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
min_size = Vector2( 500, 300 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Location" type="Label" parent="."]
light_mask = 0
margin_left = 10.0
margin_right = 109.0
margin_bottom = 27.0
theme = ExtResource( 2 )
text = "LOCATION:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Location_Data" type="Label" parent="."]
light_mask = 0
margin_left = 148.0
margin_right = 439.0
margin_bottom = 27.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Description_Data" type="Label" parent="."]
light_mask = 0
margin_left = 148.0
margin_top = 32.0
margin_right = 489.0
margin_bottom = 127.0
theme = ExtResource( 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Description" type="Label" parent="."]
light_mask = 0
margin_left = 10.0
margin_top = 32.0
margin_right = 136.0
margin_bottom = 59.0
theme = ExtResource( 2 )
text = "DESCRIPTION:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Danger" type="Label" parent="."]
light_mask = 0
margin_left = 10.0
margin_top = 140.0
margin_right = 133.0
margin_bottom = 167.0
theme = ExtResource( 2 )
text = "DANGER:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Conquest" type="Label" parent="."]
light_mask = 0
margin_left = 10.0
margin_top = 196.0
margin_right = 258.0
margin_bottom = 223.0
theme = ExtResource( 2 )
text = "BEGIN A CONQUEST HERE?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Less_Danger" type="Button" parent="."]
margin_left = 200.0
margin_top = 140.0
margin_right = 240.0
margin_bottom = 170.0
min_size = Vector2( 40, 30 )
theme = ExtResource( 1 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_More_Danger" type="Button" parent="."]
margin_left = 300.0
margin_top = 140.0
margin_right = 340.0
margin_bottom = 170.0
min_size = Vector2( 40, 30 )
theme = ExtResource( 1 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Level" type="Label" parent="."]
light_mask = 0
margin_left = 245.0
margin_top = 140.0
margin_right = 295.0
margin_bottom = 167.0
theme = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -121.0
margin_top = -40.0
margin_right = 123.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Yes" type="Button" parent="HBoxContainer"]
margin_right = 120.0
margin_bottom = 30.0
min_size = Vector2( 120, 0 )
theme = ExtResource( 1 )
text = "YES"

[node name="Button_Cancel" type="Button" parent="HBoxContainer"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 30.0
min_size = Vector2( 120, 0 )
theme = ExtResource( 1 )
text = "CANCEL"

[connection signal="pressed" from="Button_Less_Danger" to="." method="_on_Button_Less_Danger_pressed"]
[connection signal="pressed" from="Button_More_Danger" to="." method="_on_Button_More_Danger_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_Yes" to="." method="_on_Button_Yes_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_Cancel" to="." method="_cancel"]
